; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/fatten/extr_fatten.c_need_mount.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/fatten/extr_fatten.c_need_mount.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@isMounted = common dso_local global i32 0, align 4
@FR_OK = common dso_local global i32 0, align 4
@g_Filesystem = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"0:\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @need_mount() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @isMounted, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = load i32, i32* @FR_OK, align 4
  store i32 %6, i32* %1, align 4
  br label %15

7:                                                ; preds = %0
  %8 = call i32 @f_mount(i32* @g_Filesystem, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 0)
  store i32 %8, i32* %2, align 4
  %9 = load i32, i32* %2, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %7
  %12 = load i32, i32* %2, align 4
  store i32 %12, i32* %1, align 4
  br label %15

13:                                               ; preds = %7
  store i32 1, i32* @isMounted, align 4
  %14 = load i32, i32* @FR_OK, align 4
  store i32 %14, i32* %1, align 4
  br label %15

15:                                               ; preds = %13, %11, %5
  %16 = load i32, i32* %1, align 4
  ret i32 %16
}

declare dso_local i32 @f_mount(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
